re PR fortran/16898 (Aliasing problem with array descriptors)

fortran/
2005-06-04  Zdenek Dvorak  <dvorakz@suse.cz>

	PR fortran/16898
	* trans-types.c (gfc_array_range_type): New variable.
	(gfc_init_types): Initialize gfc_array_range_type.
	(gfc_get_array_type_bounds): Use gfc_array_range_type.

testsuite/
2005-06-04  Tobias Schl"uter  <tobias.schlueter@physik.uni-muenchen.de>

	PR fortran/16898
	* gfortran.dg/ret_pointer_1.f90: Un-XFAIL.

From-SVN: r100600